# nhm_scribe

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/: run-component-aware-eval10.trigger  run-deepseek-eval100.trigger  run-hespi-v10-eval10.trigger  run-hespi-v11-qwen-vision.trigger  run-hespi-v3-comparison.trigger  run-hespi-v3-nonthinking.trigger  run-hespi-v4-repeat10.trigger  run-hespi-v5-eval10.trigger  run-hespi-v6-eval10.trigger  run-hespi-v7-eval10.trigger  run-hespi-v8-eval10.trigger  run-hespi-v9-htr-base-probe.trigger  run-yoloe26-llm-crop-eval10.trigger
app_data/: gpt_primary_label_reviews_eval10.json
configs/: component_aware_eval10.yaml  deepseek_rag_demo.yaml  default.yaml  demo_10.yaml  eval_50.yaml  fixture_eval_10_deepseek_no_rag.yaml  fixture_eval_10_deepseek_rag.yaml  fixture_eval_10_rule.yaml  hespi_lite_eval_20.yaml  hespi_lite_eval_20_baseline.yaml  hespi_v10_eval10_htr_base_filtered.yaml  hespi_v11_eval10_qwen_vision.yaml  hespi_v2_acquisition.yaml  hespi_v2_eval20_base.yaml  hespi_v2_eval20_field_only.yaml  hespi_v2_eval20_full_image.yaml  hespi_v2_eval20_hybrid.yaml  hespi_v3_eval5_base.yaml  hespi_v3_eval5_nonthinking_hybrid.yaml  hespi_v3_eval5_nonthinking_lean.yaml  hespi_v3_eval5_thinking_hybrid.yaml  hespi_v4_eval10_repeat_1.yaml  hespi_v4_eval10_repeat_2.yaml  hespi_v4_eval10_repeat_3.yaml  hespi_v4_eval10_repeat_base.yaml  hespi_v4_eval10_shared_lean.yaml  hespi_v5_eval10_barcode_gbif.yaml  hespi_v6_eval10_number_ensemble.yaml  hespi_v7_eval10_catalog_resolver.yaml  hespi_v8_eval10_htr.yaml  hespi_v9_eval10_htr_base_probe.yaml  (+18 more)
(+120 files in other folders)
