[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "herbarium-scribe-demo"
version = "0.1.0"
description = "A small, reproducible SCRIBE-style herbarium extraction pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "requests>=2.31",
  "Pillow>=10.0",
  "pytesseract>=0.3.10",
  "tabulate>=0.9",
  "streamlit>=1.35",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["openai>=1.0", "anthropic>=0.30"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
