[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "herbarium-scribe-demo"
version = "0.1.0"
description = "A small, reproducible SCRIBE-style herbarium extraction pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "requests>=2.31",
  "Pillow>=10.0",
  "pytesseract>=0.3.10",
  "tabulate>=0.9",
  "streamlit>=1.35",
  "zxing-cpp>=3.0,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["openai>=1.0", "anthropic>=0.30"]
hespi = [
  "hespi==0.6.2",
  "sentencepiece>=0.2.0",
  "transformers==4.55.4",
]
yoloe = [
  "ultralytics==8.4.0",
]
rag = [
  "faiss-cpu>=1.8",
  "scikit-learn>=1.4",
  "torch>=2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
